aws/vpn.tf
# data "aws_availablility_zone" "us-west-2" {
#   name = "us-west-2"
# }

# resource "aws_vpc" "city" {
#   cidr_block = "173.31.0.0/16"

#   tags {
#    District = "city"
#   }
# }
